# mikrosdk_v2

./: .gitignore  .last_processed_file  AUTHORS.md  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Doxyfile  DoxygenLayout.xml  FreeRTOSConfig.h  LICENSE  README.md  REQUIREMENTS.md  SUPPORTED_CHIP_LIST.md  Test_Branch_Commit.txt  changelog.md  manifest.json  memake.txt  name_surname_weekly_report.md  practice2.txt  test.sh
api/: memake.txt  (+1 more)
api/ethernet/cyclonetcp/: CMakeLists.txt
api/log/lib/: CMakeLists.txt  memake.txt
api/tp/lib/: CMakeLists.txt  memake.txt
bsp/board/: CMakeLists.txt  memake.txt
bsp/board/include/: update_license_text.py
bsp/generic/: CMakeLists.txt  memake.txt
bsp/generic/include/: generic_pointer.h
deploy/static_naming_convention_f/: CMakeLists.txt  ReadMe.txt  main.c
drv/lib/: CMakeLists.txt  memake.txt
drv/lib/include/: drv_analog_in.h  drv_can.h  drv_digital_in.h  drv_digital_out.h  drv_dma.h  drv_i2c_master.h  drv_name.h  drv_one_wire.h  drv_port.h  drv_pwm.h  drv_rtc.h  drv_spi_master.h  drv_uart.h
drv/lib/src/: drv_analog_in.c  drv_digital_in.c  drv_digital_out.c  drv_i2c_master.c  drv_port.c  drv_pwm.c  drv_spi_master.c  drv_uart.c
hal/interface/: CMakeLists.txt  hal_target.h  memake.txt
hal/lib/: CMakeLists.txt  CMakeLists.txt.bak  memake.txt
hal/lib/include/: hal_adc.h  hal_can.h  hal_dma.h  hal_gpio.h  hal_i2c_master.h  hal_one_wire.h  hal_pwm.h  hal_rtc.h  hal_spi_master.h  hal_uart.h
hal/lib/src/: hal_adc.c  hal_gpio.c  hal_i2c_master.c  hal_pwm.c  hal_spi_master.c  hal_uart.c
middleware/: CMakeLists.txt  memake.txt
middleware/filesystem/: CMakeLists.txt
middleware/filesystem/include/: dir.h  ff_types.h  file.h  file_system.h
middleware/filesystem/src/: dir.c  file.c  file_system.c
middleware/freertos/: CMakeLists.txt
middleware/ft5xx6/: CMakeLists.txt  memake.txt
middleware/ft5xx6/lib/: CMakeLists.txt  memake.txt
middleware/ft800/: CMakeLists.txt
middleware/ft800/lib/: CMakeLists.txt
middleware/glcd/: CMakeLists.txt  Glcd.hex  ReadMe.txt  __Lib_Glcd.c  __Lib_Glcd_far.c  __Lib_SPIGlcd.c
middleware/glcd/Main_v1/: CMakeLists.txt  compile_commands.json  glcd.c  glcd_lib_v1.h  main.c  settings.json
middleware/glcd/lib/: CMakeLists.txt
middleware/hw/: CMakeLists.txt
middleware/ili9341/: CMakeLists.txt
middleware/ili9341/lib/: CMakeLists.txt
middleware/lcd/: CMakeLists.txt
middleware/lcd/lib/: CMakeLists.txt
middleware/physical_drive/include/: physical_drive.h
middleware/physical_drive/src/: physical_drive.c
middleware/spi_ethernet/: CMakeLists.txt
middleware/spi_ethernet/lib/: CMakeLists.txt
middleware/ssd1963/: CMakeLists.txt  memake.txt
middleware/ssd1963/lib/: CMakeLists.txt  memake.txt
middleware/st7789/lib/: CMakeLists.txt
middleware/stmpe811/: CMakeLists.txt  memake.txt
middleware/stmpe811/lib/: CMakeLists.txt  memake.txt
middleware/touch_controller/: CMakeLists.txt
middleware/touch_controller/lib/: CMakeLists.txt
middleware/tp_mikroe/: CMakeLists.txt
middleware/tp_mikroe/lib/: CMakeLists.txt
middleware/tsc2003/: CMakeLists.txt  memake.txt
middleware/tsc2003/lib/: CMakeLists.txt  memake.txt
platform/plot/: CMakeLists.txt
platform/plot/include/: plot.h
sdk/api/: CMakeLists.txt
sdk/api/ethernet/: CMakeLists.txt
sdk/api/tp/: CMakeLists.txt
sdk/api/usb/: CMakeLists.txt
targets/: CMakeLists.txt  memake.txt
targets/arm/mikroe/: CMakeLists.txt  memake.txt
targets/avr_8bit/mikroe/: CMakeLists.txt
targets/pic_32bit/mikroe/: CMakeLists.txt  memake.txt
targets/pic_8bit/mikroe/: CMakeLists.txt  memake.txt
targets/riscv/mikroe/: CMakeLists.txt
tests/: CMakeLists.txt  CMakeLists.txt.bak  memake.txt
tests/adc/: CMakeLists.txt  ReadMe.txt  main.c  memake.txt
tests/blinking_diodes/: CMakeLists.txt  main.c
tests/button_simulation/: CMakeLists.txt  main.c
tests/can/can_loopback/: main.c
tests/can/can_rx/: main.c
tests/can/can_tx/: CMakeLists.txt  main.c
tests/clicker_buttons/: CMakeLists.txt  memake.txt
tests/clicker_buttons/inc/: clicker_buttons.h
tests/clicker_buttons/src/: main.c
tests/clicks/: CMakeLists.txt  memake.txt
tests/clicks/adc/: CMakeLists.txt  memake.txt
tests/clicks/gpio/: CMakeLists.txt  memake.txt
tests/clicks/i2c/: CMakeLists.txt  memake.txt
tests/clicks/one_wire/: CMakeLists.txt  memake.txt
tests/clicks/pwm/: CMakeLists.txt  memake.txt
tests/clicks/spi/: CMakeLists.txt  memake.txt
tests/clicks/test_specifics/: pin_connections.h  spi_specifics.h
tests/clicks/uart/: CMakeLists.txt  memake.txt
tests/conversions/: CMakeLists.txt  ReadMe.txt  main.c
tests/dma/: CMakeLists.txt
tests/dma/test_dma_m2m/: CMakeLists.txt  main.c
tests/dma/test_dma_m2m_p2p_2dmas/: CMakeLists.txt  main.c
tests/dma/test_dma_m2p/: CMakeLists.txt  main.c
tests/dma/test_dma_m2p_uart/: CMakeLists.txt  main.c
tests/dma/test_dma_p2p_uart_echo/: CMakeLists.txt  main.c
tests/ethernet/: CMakeLists.txt
tests/ethernet/test_ftp_client/: CMakeLists.txt  main.c
tests/freertos/: CMakeLists.txt
tests/gl/: CMakeLists.txt
tests/glcd/: CMakeLists.txt
tests/gpio/: CMakeLists.txt  ReadMe.txt  memake.txt
tests/i2c/: CMakeLists.txt  main.c  memake.txt
tests/lcd/: CMakeLists.txt  ReadMe.txt
tests/led_freertos_test/: CMakeLists.txt  main.c
tests/mikrobus/: CMakeLists.txt  memake.txt
tests/multi_core/: CMakeLists.txt
tests/one_wire/: CMakeLists.txt  main.c  memake.txt
tests/producer_consumer/: CMakeLists.txt  main.c
tests/pwm/: CMakeLists.txt  main.c  memake.txt
tests/renesas/: CMakeLists.txt
tests/rtc/: CMakeLists.txt  ReadMe.txt  main.c
tests/signalling/: CMakeLists.txt  main.c
tests/single_core/: CMakeLists.txt
tests/spi/: CMakeLists.txt  ReadMe.txt  main.c  memake.txt
tests/spi_ethernet/: CMakeLists.txt  main.c
tests/sprint/: CMakeLists.txt  ReadMe.txt  main.c
tests/task_notifications/: CMakeLists.txt  main.c
tests/tft_jig/: CMakeLists.txt  ReadMe.txt  memake.txt
tests/tft_touch_panel/: ReadMe.txt  memake.txt
tests/uart/: CMakeLists.txt  memake.txt
(+19520 files in other folders)
