if (${BOARD_NAME} MATCHES "(^CLICKER(.+)$|^(.+)CLICKER$|^(.+)CURIOSITY(.+)$|^FLIP_AND_CLICK_PIC32MZ$|^GENERIC_BOARD$|^BOARD_PICPLC16_V7$|^(.+)_V7_(.+)$|^(.+)V7$|^BOARD_FLOWPAW$|^BOARD_QUAIL$|^BOARD_MICROMOD(.+))")
    set(tftTests FALSE)
else()
    set(tftTests TRUE)
endif()

if (${BOARD_NAME} MATCHES "(^GENERIC_BOARD$)")
    set(clickTests FALSE)
else()
    set(clickTests TRUE)
endif()

if (${BOARD_NAME} MATCHES "^MIKROMEDIA(.+)$")
    set(tftJigTest FALSE)
else()
    set(tftJigTest TRUE)
endif()

add_subdirectory(gl)
add_subdirectory(gpio)
add_subdirectory(adc)
add_subdirectory(i2c)
add_subdirectory(pwm)
add_subdirectory(spi)
add_subdirectory(uart)
add_subdirectory(mikrobus)
add_subdirectory(clicker_buttons)
add_subdirectory(one_wire)

if (clickTests)
    add_subdirectory(clicks)
endif()
if (tftTests)
    if(tftJigTest)
        add_subdirectory(tft_jig)
    endif()
endif()
